[package]
name = "unique_assets"
version = "0.1.0"
authors = ["Jay Butera <buterajay@protonmail.com>"]
edition = "2018"

[dependencies]
frame-support = { branch = "master", git = "https://github.com/centrifuge/substrate.git", default-features = false }
sp-std = { branch = "master", git = "https://github.com/centrifuge/substrate", default-features = false }

[features]
default = [ "std" ]
std = [
    "frame-support/std",
    "sp-std/std",
]
